Reporte: Reservas segun su estado

--- a/src/app/layout/reporte-2/reporte-2.component.html
+++ b/src/app/layout/reporte-2/reporte-2.component.html
@@ -38,7 +38,7 @@
             </div>
         </div>
         <div class="col-md-2">
-            <button (click)="onGenerateClick()" class="btn btn-success alineado" >Generar Grafico</button>
+            <button (click)="onGenerateClick()" class="btn btn-success alineado" >Generar gráfico</button>
         </div>
         <br>
         <br>
