Reporte: Reservas segun su estado Trae todas las reservas del parque y filtra fechas con un for

--- a/src/app/layout/reporte-3/reporte-3.component.html
+++ b/src/app/layout/reporte-3/reporte-3.component.html
@@ -70,7 +70,7 @@
                     <div class="row">
                         <div class="tile tile-green col-md-5">
                             <label>{{totalReservas}}</label>
-                            <p>TOTAL</p>
+                            <p>Reservas en total</p>
                         </div>
                         <div class="tile tile-blue col-md-5">
                             <label>{{porcentajeAceptadas}}%</label>
