--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -22,7 +22,9 @@ $topnav-background-color: #222;
         padding: 2%;
         border-radius: 3%;
     }
-
+    .img-logo{
+        margin: auto;
+    }
     .col-lg-4{
         padding :0;
     }
