--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,8 +1,7 @@
 <div class="login-page" [@routerTransition]>
     <div class="row">
         <div class="col-md-4 push-md-4 signup-page-content">
-            <img class="user-avatar" src="assets/images/logo.png" width="150px" />
-            <h1>Donde estaciono? - WEB</h1>
+            <img class="" src="assets/images/logo.png" width="150px" />
             <form role="form" name="signup-form" #f="ngForm">
                 <div class="form-content">
                     <div class="form-group">
