--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,9 @@
     <div class="row">
         <div class="col-md-4 push-md-4 login-page-content">
             <br>
-            <img class="img-logo" src="assets/images/logo.png" style="max-height: 35px" />
+            <div style="background-color: rgba(255,255,255,0.9); border-radius: 50%; padding: 5%;">
+                <img class="img-logo" src="assets/images/logo.png" style="max-height: 35px" />
+            </div>
             <h1 hidden>¿Donde estaciono?</h1>
             <br>
             <br>
